// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProviderIcon snapshot for rejected provider 1`] = `
<div>
  <svg
    aria-hidden={true}
    aria-labelledby={null}
    data-testid="icon-declined"
    fill="var(--pf-global--warning-color--100)"
    height="1em"
    role="img"
    style={
      {
        "verticalAlign": "-0.125em",
      }
    }
    viewBox="0 0 576 512"
    width="1em"
  >
    <path
      d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
    />
  </svg>
  <span>
    Authorization has been rejected by user.
  </span>
</div>
`;

exports[`ProviderIcon snapshot for the provider not authorized yet 1`] = `
<div>
  <svg
    aria-hidden={true}
    aria-labelledby={null}
    data-testid="icon-unauthorized"
    fill="var(--pf-global--disabled-color--100)"
    height="1em"
    role="img"
    style={
      {
        "verticalAlign": "-0.125em",
      }
    }
    viewBox="0 0 1024 1024"
    width="1em"
  >
    <path
      d="M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.7,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 L512,896 Z M512.1,0 C229.7,0 0,229.8 0,512 C0,794.3 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0 L512.1,0 Z"
    />
  </svg>
  <span>
    Unauthorized
  </span>
</div>
`;

exports[`ProviderIcon snapshot for the successfully authorized provider 1`] = `
<div>
  <svg
    aria-hidden={true}
    aria-labelledby={null}
    data-testid="icon-authorized"
    fill="var(--pf-global--success-color--100)"
    height="1em"
    role="img"
    style={
      {
        "verticalAlign": "-0.125em",
      }
    }
    viewBox="0 0 512 512"
    width="1em"
  >
    <path
      d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
    />
  </svg>
  <span>
    Authorized
  </span>
</div>
`;
